--- a/research/04_model_evaluation.ipynb
+++ b/research/04_model_evaluation.ipynb
@@ -33,9 +33,21 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\SaiVenkataSriramChow\\\\Downloads\\\\chest-cancer-classification'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "os.chdir('../')\n"
+    "os.chdir('c:\\\\Users\\\\SaiVenkataSriramChow\\\\Downloads\\\\chest-cancer-classification')\n",
+    "%pwd"
    ]
   },
   {
@@ -109,7 +121,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.models.load_model(\"artifacts/training/model.h5\")"
+    "model = tf.keras.models.load_model('artifacts/training/model.h5')"
    ]
   },
   {
@@ -126,7 +138,6 @@
     "    path_of_model: Path\n",
     "    training_data: Path\n",
     "    all_params: dict\n",
-    "    mlflow_uri: str\n",
     "    params_image_size: list\n",
     "    params_batch_size: int"
    ]
@@ -150,23 +161,22 @@
     "class ConfigurationManager:\n",
     "    def __init__(\n",
     "        self, \n",
-    "        config_filepath = CONFIG_FILE_PATH,\n",
-    "        params_filepath = PARAMS_FILE_PATH):\n",
+    "        config_filepath=CONFIG_FILE_PATH,\n",
+    "        params_filepath=PARAMS_FILE_PATH\n",
+    "    ):\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
     "        create_directories([self.config.artifacts_root])\n",
     "\n",
-    "    \n",
     "    def get_evaluation_config(self) -> EvaluationConfig:\n",
     "        eval_config = EvaluationConfig(\n",
     "            path_of_model=\"artifacts/training/model.h5\",\n",
     "            training_data=\"artifacts/data_ingestion/Chest-CT-Scan-data\",\n",
-    "            mlflow_uri=\"https://dagshub.com/sriram-2490/my-first-repo.mlflow\",\n",
     "            all_params=self.params,\n",
     "            params_image_size=self.params.IMAGE_SIZE,\n",
     "            params_batch_size=self.params.BATCH_SIZE\n",
     "        )\n",
-    "        return eval_config"
+    "        return eval_config\n"
    ]
   },
   {
@@ -188,15 +198,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import mlflow\n",
+    "import dagshub\n",
+    "import tensorflow as tf\n",
+    "from pathlib import Path\n",
+    "from urllib.parse import urlparse\n",
+    "\n",
     "class Evaluation:\n",
     "    def __init__(self, config: EvaluationConfig):\n",
     "        self.config = config\n",
     "\n",
-    "    \n",
     "    def _valid_generator(self):\n",
-    "\n",
     "        datagenerator_kwargs = dict(\n",
-    "            rescale = 1./255,\n",
+    "            rescale=1./255,\n",
     "            validation_split=0.30\n",
     "        )\n",
     "\n",
@@ -217,42 +231,36 @@
     "            **dataflow_kwargs\n",
     "        )\n",
     "\n",
-    "\n",
     "    @staticmethod\n",
     "    def load_model(path: Path) -> tf.keras.Model:\n",
     "        return tf.keras.models.load_model(path)\n",
-    "    \n",
     "\n",
     "    def evaluation(self):\n",
     "        self.model = self.load_model(self.config.path_of_model)\n",
     "        self._valid_generator()\n",
-    "        self.score = model.evaluate(self.valid_generator)\n",
+    "        self.score = self.model.evaluate(self.valid_generator)  # Use self.model instead of model\n",
     "        self.save_score()\n",
     "\n",
     "    def save_score(self):\n",
     "        scores = {\"loss\": self.score[0], \"accuracy\": self.score[1]}\n",
     "        save_json(path=Path(\"scores.json\"), data=scores)\n",
     "\n",
-    "    \n",
     "    def log_into_mlflow(self):\n",
-    "        mlflow.set_registry_uri(self.config.mlflow_uri)\n",
-    "        tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
-    "        \n",
+    "        # Initialize Dagshub and MLflow\n",
+    "        dagshub.init(repo_owner='sriram-2490', repo_name='my-first-repo', mlflow=True)\n",
+    "\n",
     "        with mlflow.start_run():\n",
     "            mlflow.log_params(self.config.all_params)\n",
     "            mlflow.log_metrics(\n",
     "                {\"loss\": self.score[0], \"accuracy\": self.score[1]}\n",
     "            )\n",
     "            # Model registry does not work with file store\n",
+    "            tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
     "            if tracking_url_type_store != \"file\":\n",
-    "\n",
     "                # Register the model\n",
-    "                # There are other ways to use the Model Registry, which depends on the use case,\n",
-    "                # please refer to the doc for more information:\n",
-    "                # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
     "                mlflow.keras.log_model(self.model, \"model\", registered_model_name=\"VGG16Model\")\n",
     "            else:\n",
-    "                mlflow.keras.log_model(self.model, \"model\")"
+    "                mlflow.keras.log_model(self.model, \"model\")\n"
    ]
   },
   {
@@ -264,34 +272,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-03-22 14:51:29,497: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-03-22 14:51:29,508: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-03-22 14:51:29,517: INFO: common: created directory at: artifacts]\n"
+      "[2025-03-25 00:12:49,582: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-03-25 00:12:49,585: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-03-25 00:12:49,586: INFO: common: created directory at: artifacts]\n",
+      "Found 102 images belonging to 2 classes.\n",
+      "7/7 [==============================] - 6s 861ms/step - loss: 27.6326 - accuracy: 0.5686\n",
+      "[2025-03-25 00:12:56,325: INFO: common: json file saved at: scores.json]\n",
+      "[2025-03-25 00:12:56,608: INFO: _client: HTTP Request: GET https://dagshub.com/api/v1/repos/sriram-2490/my-first-repo \"HTTP/1.1 200 OK\"]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Initialized MLflow to track repo <span style=\"color: #008000; text-decoration-color: #008000\">\"sriram-2490/my-first-repo\"</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Initialized MLflow to track repo \u001b[32m\"sriram-2490/my-first-repo\"\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 102 images belonging to 2 classes.\n",
-      "7/7 [==============================] - 8s 1s/step - loss: 26.5414 - accuracy: 0.5686\n",
-      "[2025-03-22 14:51:38,731: INFO: common: json file saved at: scores.json]\n"
+      "[2025-03-25 00:12:56,608: INFO: helpers: Initialized MLflow to track repo \"sriram-2490/my-first-repo\"]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Repository sriram-<span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2490</span>/my-first-repo initialized!\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Repository sriram-\u001b[1;36m2490\u001b[0m/my-first-repo initialized!\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-03-25 00:12:56,624: INFO: helpers: Repository sriram-2490/my-first-repo initialized!]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/03/22 14:51:39 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
+      "2025/03/25 00:12:57 WARNING mlflow.tensorflow: You are saving a TensorFlow Core model or Keras model without a signature. Inference with mlflow.pyfunc.spark_udf() will not work unless the model's pyfunc representation accepts pandas DataFrames as inference inputs.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-03-22 14:51:40,998: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
-      "INFO:tensorflow:Assets written to: C:\\Users\\SAIVEN~1\\AppData\\Local\\Temp\\tmpucamfxom\\model\\data\\model\\assets\n",
-      "[2025-03-22 14:51:41,902: INFO: builder_impl: Assets written to: C:\\Users\\SAIVEN~1\\AppData\\Local\\Temp\\tmpucamfxom\\model\\data\\model\\assets]\n"
+      "[2025-03-25 00:12:58,059: WARNING: save: Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op while saving (showing 5 of 14). These functions will not be directly callable after loading.]\n",
+      "INFO:tensorflow:Assets written to: C:\\Users\\SAIVEN~1\\AppData\\Local\\Temp\\tmpwyo410j7\\model\\data\\model\\assets\n",
+      "[2025-03-25 00:12:58,979: INFO: builder_impl: Assets written to: C:\\Users\\SAIVEN~1\\AppData\\Local\\Temp\\tmpwyo410j7\\model\\data\\model\\assets]\n"
      ]
     },
     {
@@ -301,8 +344,8 @@
       "c:\\Users\\SaiVenkataSriramChow\\anaconda3\\envs\\cancer\\lib\\site-packages\\_distutils_hack\\__init__.py:31: UserWarning: Setuptools is replacing distutils. Support for replacing an already imported distutils is deprecated. In the future, this condition will fail. Register concerns at https://github.com/pypa/setuptools/issues/new?template=distutils-deprecation.yml\n",
       "  warnings.warn(\n",
       "Registered model 'VGG16Model' already exists. Creating a new version of this model...\n",
-      "2025/03/22 14:52:24 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 3\n",
-      "Created version '3' of model 'VGG16Model'.\n"
+      "2025/03/25 00:13:38 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: VGG16Model, version 5\n",
+      "Created version '5' of model 'VGG16Model'.\n"
      ]
     }
    ],
